fix(backend): bind dynamic port for Railway and configure production CORS